--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL= 'postgres://dfowzbgi:i8XfiJEK460eC4hFmOVyh0kGh__DNAWM@fanny.db.elephantsql.com/dfowzbgi'
+DATABASE_URL="postgres://dfowzbgi:i8XfiJEK460eC4hFmOVyh0kGh__DNAWM@fanny.db.elephantsql.com/dfowzbgi"
