--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "family-menu-backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "family menu backend data",
   "main": "src/server.js",
   "scripts": {
     "start": "node src/server.js",
